# C-STL

./: .gitignore  C STL.c  C STL.h  CMakeLists.txt  LICENSE  README.md  main.c
include/: c_algorithms.h  find.h  functional.h  numeric.h
